--- a/url-shortener/package.json
+++ b/url-shortener/package.json
@@ -22,14 +22,13 @@
     "lint:fix": "eslint . --fix",
     "format:check": "prettier -c --ignore-path .gitignore \"**/*.{css,html,js,ts,json,md,yaml,yml}\"",
     "format:write": "prettier --write --ignore-path .gitignore \"**/*.{css,html,js,ts,json,md,yaml,yml}\"",
-    "prepare": "husky install"
+    "prepare": "cd .. && husky install url-shortener/.husky"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
-    "husky": "^8.0.3",
     "mongoose": "^8.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -48,6 +47,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^8.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
